test/fail/error_kind2.sest
module ErrorKind2 = struct

  val f<?$r :: (foo)>(n : int, b : bool) : { foo : int, bar : bool, ?$r } =
    { foo = n, bar = b }

end
